# Omnia

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report_violation.md
.github/workflows/: ci.yml
docs/: README.md  getting-started.md
examples/: CMakeLists.txt  README.md  hello_world.cpp  hello_world.rs
include/omnia/: app.hpp  omnia.hpp  view.hpp  window.hpp
include/omnia/ui/: button.hpp  spacer.hpp  stack.hpp  text.hpp
include/omnia/utils/: color.hpp  geometry.hpp
src/core/: app.cpp  view.cpp  window.cpp
src/ui/: button.cpp  spacer.cpp  stack.cpp  text.cpp
src/utils/: color.cpp  geometry.cpp
